Utilize flex and order to maintain criss-cross pattern of content on large screens, but on smaller screens make sure that the text always comes before the images

--- a/src/main/webapp/resources/css/style-small.css
+++ b/src/main/webapp/resources/css/style-small.css
@@ -72,3 +72,9 @@
 	#user-details {
 		width: 80%;
 	}
+
+/* Home Page */
+
+	.flex {
+		display: inline;
+	}
